# llvm-nts-PartialOrderReduction

./: CMakeLists.txt
bench/: bench.sh  fib_bench_false-unreach-call.c  fib_bench_false-unreach-call.ll  fib_bench_false-unreach-call_cleaned.ll
bench/fib_bench_false-unreach-call/: Makefile  cleaned.ll  cleaned.ll-seq-t2-por.nts  cleaned.ll-seq-t2-simple.nts  cleaned.nts  named.ll  orig.c  orig.ll  threads_2-por.nts  threads_2-simple.nts  threads_3-por.nts
bench/simplest/: simplest.ll-seq-t2-por.nts  simplest.ll-seq-t2-simple.nts
run/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  control_flow_graph.cpp  control_flow_graph.hpp  control_state.cpp  control_state.hpp  logic_utils.cpp  logic_utils.hpp  main.cpp  nts-seq.cpp  nts-seq.hpp  tasks.cpp  tasks.hpp
